--- a/productos.html
+++ b/productos.html
@@ -71,29 +71,101 @@
                     </div>
                 </div>
                 <div class="product-grid">
-                    <div class="product-card" data-product-id="kit-pequeno" data-product-price="35.00">
-                        <div class="badge best-value">Mejor Valor</div>
-                        <div class="product-image">🏡</div>
-                        <div class="product-info">
-                            <h3>Kit Mudanza Pequeña</h3>
-                            <p class="description">Ideal para estudios o apartamentos de 1 habitación.</p>
-                            <ul class="product-features">
-                                <li>10 cajas medianas y 5 grandes</li>
-                                <li>Cinta y marcadores incluidos</li>
-                            </ul>
-                            <div class="quantity-control">
-                                <label for="qty-kit-pequeno">Cantidad:</label>
-                                <select id="qty-kit-pequeno" class="product-qty form-control">
-                                    <option value="" disabled selected>Selecciona</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                </select>
-                            </div>
-                            <p class="price">$35.00 <span>/semana</span></p>
-                            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
-                        </div>
-                    </div>
-                    </div>
+    <div class="product-card" data-product-id="kit-pequeno" data-product-price="550.00">
+        <div class="badge best-value">Mejor Valor</div>
+        <div class="product-image">🏡</div>
+        <div class="product-info">
+            <h3>Kit Mudanza Pequeña</h3>
+            <p class="description">Ideal para estudios o apartamentos de 1 habitación (aprox. 25 cajas).</p>
+            <ul class="product-features">
+                <li>15 cajas medianas y 10 grandes</li>
+                <li>Cinta, marcadores y diablito</li>
+            </ul>
+            <div class="quantity-control">
+                <label for="qty-kit-pequeno">Cantidad:</label>
+                <select id="qty-kit-pequeno" class="product-qty form-control">
+                    <option value="" disabled selected>Selecciona</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
+            <p class="price">$550.00 MXN <span>/semana</span></p>
+            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+        </div>
+    </div>
+
+    <div class="product-card" data-product-id="kit-mediano" data-product-price="980.00">
+        <div class="badge popular">Más Popular</div>
+        <div class="product-image">🏘️</div>
+        <div class="product-info">
+            <h3>Kit Mudanza Mediana</h3>
+            <p class="description">Perfecto para casas o departamentos de 2 a 3 recámaras (aprox. 50 cajas).</p>
+            <ul class="product-features">
+                <li>30 cajas medianas y 20 grandes</li>
+                <li>Cinta, marcadores y diablito reforzado</li>
+            </ul>
+            <div class="quantity-control">
+                <label for="qty-kit-mediano">Cantidad:</label>
+                <select id="qty-kit-mediano" class="product-qty form-control">
+                    <option value="" disabled selected>Selecciona</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                </select>
+            </div>
+            <p class="price">$980.00 MXN <span>/semana</span></p>
+            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+        </div>
+    </div>
+
+    <div class="product-card" data-product-id="kit-grande" data-product-price="1600.00">
+        <div class="badge"></div>
+        <div class="product-image">🏰</div>
+        <div class="product-info">
+            <h3>Kit Mudanza Grande</h3>
+            <p class="description">Para casas grandes de 4+ recámaras o mudanzas completas (aprox. 80 cajas).</p>
+            <ul class="product-features">
+                <li>50 cajas medianas y 30 grandes</li>
+                <li>Kit de embalaje y 2 diablitos</li>
+            </ul>
+            <div class="quantity-control">
+                <label for="qty-kit-grande">Cantidad:</label>
+                <select id="qty-kit-grande" class="product-qty form-control">
+                    <option value="" disabled selected>Selecciona</option>
+                    <option value="1">1</option>
+                </select>
+            </div>
+            <p class="price">$1,600.00 MXN <span>/semana</span></p>
+            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+        </div>
+    </div>
+    
+    <div class="product-card" data-product-id="accesorios-pro" data-product-price="300.00">
+        <div class="badge nuevo">Accesorios</div>
+        <div class="product-image">✨</div>
+        <div class="product-info">
+            <h3>Kit Protector de Frágiles</h3>
+            <p class="description">Protege tu vajilla, vasos y objetos delicados con nuestros separadores ecológicos.</p>
+            <ul class="product-features">
+                <li>Separadores para 24 vasos</li>
+                <li>Separadores para 12 platos</li>
+                <li>Papel de embalaje ecológico</li>
+            </ul>
+            <div class="quantity-control">
+                <label for="qty-accesorios-pro">Cantidad:</label>
+                <select id="qty-accesorios-pro" class="product-qty form-control">
+                    <option value="" disabled selected>Selecciona</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+            </div>
+            <p class="price">$300.00 MXN <span>/semana</span></p>
+            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
+        </div>
+    </div>
+</div>
             </div>
         </section>
     </main>
