--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
             </div>
             <div class="cart-modal-body" id="cartItemsContainer"></div>
             <div class="cart-modal-footer">
+                <div class="cart-rental-dates" style="display: none;">
+                    <p>Fechas de alquiler:</p>
+                    <p>Entrega: <span id="cartStartDate"></span></p>
+                    <p>Recolección: <span id="cartEndDate"></span></p>
+                </div>
                 <div class="cart-summary">
                     <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
                     <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
